# tiirs.mobile

./: .gitignore
Toir-mobile/: .classpath  .project  AndroidManifest.xml  build.gradle  gradle.properties  gradle.properties.koputo  project.properties
Toir-mobile-test/: .classpath  .project  AndroidManifest.xml
Toir-mobile-test/res/values/: strings.xml
Toir-mobile/app/: build.gradle  proguard-rules.pro  version.properties
Toir-mobile/assets/updatedb/: scheme.erd  update1.sql  update10.sql  update11.sql  update12.sql  update14.sql  update15.sql  update16.sql  update19.sql  update2.sql  update21.sql  update24.sql  update26.sql  update28.sql  update3.sql  update4.sql  update5.sql  update6.sql  update7.sql  update8.sql  update9.sql
Toir-mobile/docs/: order.erd  patterns.erd  scheme-v2.erd  scheme.erd
Toir-mobile/gradle/wrapper/: gradle-wrapper.properties
Toir-mobile/jni/: Android.mk  Scanner.c  Scanner.h  debug.h
Toir-mobile/res/drawable/: fancy_list_background1.xml  fancy_list_background2.xml  list_background1.xml  list_background2.xml  list_divider.xml  (+2 more)
c5lib/: .cproject  .project  AndroidManifest.xml  build.gradle  gradle.properties
c5lib/jni/: Android.mk  firmware.h  reader.c  reader_orig.c
c5lib/lib/: build.gradle  proguard-rules.pro
c5lib/lib/src/main/cpp/: CMakeLists.txt
c5lib/lib/src/main/cpp/tiny-tools/: CMakeLists.txt  scanner.c  scanner.h
c5lib/lib/src/main/cpp/uhf-tools/: CMakeLists.txt  firmware.h  reader.c  reader.h
materialdrawer-4.6.4/: build.gradle
p6300/: build.gradle
p6300/lib/: build.gradle  proguard-rules.pro
(+1165 files in other folders)
